First version to show

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,13 +10,22 @@
     {
       "path": "assets/js/main.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"static/assets/js/main-dist.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "content/_index.md",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"compiler-markdown\":{\"enabled\":true,\"sanitize\":false,\"githubFlavored\":true,\"wrapWithHtml\":true}}"
+    },
+    {
+      "path": "assets/scss/icons.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
       "assets/js",
-      "assets/scss"
+      "assets/scss",
+      "content"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -32,20 +41,6 @@
   },
   "imports": [
     {
-      "path": "assets/scss/main.scss",
-      "imports": [
-        "assets/scss/theme/vendor/bootstrap.scss",
-        "assets/scss/theme/vendor/font-awesome.scss",
-        "assets/scss/theme/vendor/owl.carousel.scss",
-        "assets/scss/theme/vendor/owl.theme.scss",
-        "assets/scss/theme/animate.min.scss",
-        "assets/scss/theme/style.scss",
-        "assets/scss/theme/responsive.scss",
-        "assets/scss/theme/switcher.scss",
-        "assets/scss/theme/style1.scss"
-      ]
-    },
-    {
       "path": "assets/js/main.js",
       "imports": [
         "assets/js/theme/jquery.min.js",
@@ -57,10 +52,26 @@
         "assets/js/theme/form-contact.js",
         "assets/js/theme/scripts.js"
       ]
+    },
+    {
+      "path": "assets/scss/main.scss",
+      "imports": [
+        "assets/scss/_variables.scss",
+        "assets/scss/theme/vendor/bootstrap.scss",
+        "assets/scss/theme/vendor/font-awesome.scss",
+        "assets/scss/theme/vendor/owl.carousel.scss",
+        "assets/scss/theme/vendor/owl.theme.scss",
+        "assets/scss/theme/animate.min.scss",
+        "assets/scss/theme/style.scss",
+        "assets/scss/theme/responsive.scss",
+        "assets/scss/theme/switcher.scss",
+        "assets/scss/theme/color.scss",
+        "assets/scss/icons.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
