--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,11 +45,12 @@
       "imports": [
         "assets/js/theme/jquery.min.js",
         "assets/js/theme/vendor/bootstrap.js",
-        "assets/js/theme/vendor/owl.carousel.js",
+        "assets/js/theme/vendor/owl.carousel.2.js",
         "assets/js/theme/jquery.stellar.min.js",
         "assets/js/theme/wow.min.js",
         "assets/js/theme/gmap3.min.js",
         "assets/js/theme/form-contact.js",
+        "assets/js/custom-animation.js",
         "assets/js/theme/scripts.js"
       ]
     },
@@ -59,8 +60,8 @@
         "assets/scss/_variables.scss",
         "assets/scss/theme/vendor/bootstrap.scss",
         "assets/scss/theme/vendor/font-awesome.scss",
-        "assets/scss/theme/vendor/owl.carousel.scss",
-        "assets/scss/theme/vendor/owl.theme.scss",
+        "assets/scss/theme/vendor/owl.carousel.2.scss",
+        "assets/scss/theme/vendor/owl.theme.default.scss",
         "assets/scss/theme/animate.min.scss",
         "assets/scss/theme/style.scss",
         "assets/scss/theme/responsive.scss",
@@ -71,7 +72,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
