--- a/prepros-6.config
+++ b/prepros-6.config
@@ -51,6 +51,7 @@
         "assets/js/theme/gmap3.min.js",
         "assets/js/theme/form-contact.js",
         "assets/js/custom-animation.js",
+        "assets/js/matchheight.min.js",
         "assets/js/theme/scripts.js"
       ]
     },
