text updates; styling fixes;

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,22 +10,13 @@
     {
       "path": "assets/js/main.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"static/assets/js/main-dist.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "content/_index.md",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"compiler-markdown\":{\"enabled\":true,\"sanitize\":false,\"githubFlavored\":true,\"wrapWithHtml\":true}}"
-    },
-    {
-      "path": "assets/scss/icons.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
       "assets/js",
-      "assets/scss",
-      "content"
+      "assets/scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -41,34 +32,30 @@
   },
   "imports": [
     {
-      "path": "assets/js/main.js",
-      "imports": [
-        "assets/js/theme/jquery.min.js",
-        "assets/js/theme/vendor/bootstrap.js",
-        "assets/js/theme/vendor/owl.carousel.2.js",
-        "assets/js/theme/jquery.stellar.min.js",
-        "assets/js/theme/wow.min.js",
-        "assets/js/theme/gmap3.min.js",
-        "assets/js/theme/form-contact.js",
-        "assets/js/custom-animation.js",
-        "assets/js/matchheight.min.js",
-        "assets/js/theme/scripts.js"
-      ]
-    },
-    {
       "path": "assets/scss/main.scss",
       "imports": [
-        "assets/scss/_variables.scss",
         "assets/scss/theme/vendor/bootstrap.scss",
         "assets/scss/theme/vendor/font-awesome.scss",
-        "assets/scss/theme/vendor/owl.carousel.2.scss",
-        "assets/scss/theme/vendor/owl.theme.default.scss",
+        "assets/scss/theme/vendor/owl.carousel.scss",
+        "assets/scss/theme/vendor/owl.theme.scss",
         "assets/scss/theme/animate.min.scss",
         "assets/scss/theme/style.scss",
         "assets/scss/theme/responsive.scss",
         "assets/scss/theme/switcher.scss",
-        "assets/scss/theme/color.scss",
-        "assets/scss/icons.scss"
+        "assets/scss/theme/style1.scss"
+      ]
+    },
+    {
+      "path": "assets/js/main.js",
+      "imports": [
+        "assets/js/theme/jquery.min.js",
+        "assets/js/theme/vendor/bootstrap.js",
+        "assets/js/theme/vendor/owl.carousel.js",
+        "assets/js/theme/jquery.stellar.min.js",
+        "assets/js/theme/wow.min.js",
+        "assets/js/theme/gmap3.min.js",
+        "assets/js/theme/form-contact.js",
+        "assets/js/theme/scripts.js"
       ]
     }
   ],
